[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for rsa transactions
openssl-sys = "0.9"
openssl = { version = "0.10.42", features = ["vendored"] }
rsa = "0.6.1"
hex-literal = "0.3.4"
chrono = "0.4"
sha2 = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
bincode = "1.0"
# for block implmentation
log = "0.4"
hex = "0.4"

once_cell = "1.15"
